apps/base/dev-argo-workflows/deploy/base/argo-server/argo-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-server
spec:
  selector:
    app.kubernetes.io/name: argo-workflows
    app.kubernetes.io/component: argo-server
  ports:
    - name: web
      port: 2746
      targetPort: 2746
