apps/base/dev-argo-workflows/deploy/base/argo-server/argo-server-networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-argo-server
spec:
  types: [Ingress]

  podSelector:
    matchLabels:
      app.kubernetes.io/name: argo-workflows
      app.kubernetes.io/component: argo-server
  ingress:
    # Allow from the ingress controller
    - ports:
        - port: web
      from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
